--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.1.50'
-    ext.vertx_version = '3.4.2'
+    ext.kotlin_version = '1.1.60'
+    ext.vertx_version = '3.5.0'
 
     repositories {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
@@ -35,6 +35,7 @@ dependencies {
     compile "io.vertx:vertx-web:$vertx_version"
     compile "io.vertx:vertx-web-client:$vertx_version"
     compile "io.vertx:vertx-mongo-client:$vertx_version"
+    compile "io.vertx:vertx-rx-java2:$vertx_version"
     compile "io.vertx:vertx-config:$vertx_version"
 
     compile "org.slf4j:slf4j-api:1.7.25"
