--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
+kotlin { experimental { coroutines 'enable' } }
+
 group 'com.finogeeks.finochat'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
