--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     compile "org.mongodb.morphia:morphia:1.3.2"
     compile "io.reactivex.rxjava2:rxkotlin:2.1.0"
     compile "org.funktionale:funktionale-all:1.1"
-//    compile "com.finogeeks.monitor.client:vertx:1.0.0"
+
+    compile "com.finogeeks.monitor.client:vertx:1.1.0"  // for vertx 3.5.0
 
     testCompile "io.vertx:vertx-unit:$vertx_version"
     testCompile "junit:junit:4.12"
